tests/ui/traits/maybe-polarity-repeated.stderr
error[E0203]: type parameter has more than one relaxed default bound, only one is supported
  --> $DIR/maybe-polarity-repeated.rs:4:11
   |
LL | fn foo<T: ?Trait + ?Trait>(_: T) {}
   |           ^^^^^^   ^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/maybe-polarity-repeated.rs:4:11
   |
LL | fn foo<T: ?Trait + ?Trait>(_: T) {}
   |           ^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/maybe-polarity-repeated.rs:4:20
   |
LL | fn foo<T: ?Trait + ?Trait>(_: T) {}
   |                    ^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0203`.
